--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+    min-height: 100vh;
+}
+
 .sticky-header {
     width: 100%;
     height: 80px;
@@ -55,6 +59,7 @@
 #nightowl-switcher-default {
     top: unset!important;
     bottom: 10px;
+    display: none!important;
 }
 
 html.nightowl-dark img.logo  {
